<resources>
    <string name="app_name">DevelopmentTest</string>
    <string name="app_edition">测试程序V1.0</string>
    
    <string name="shutdown">关机</string>
    <string name="restart">重启</string>
    <string name="exit">退出</string>
    
    <string name="diagnose_procedure">诊断程序</string>
    <string name="ticket_reader">读票机</string>
    <string name="printer">打印机</string>
    <string name="scanner_gun">扫描枪</string>
    <string name="keyboard">电池</string>
    <string name="toast_chance">烤机程序</string>
    <string name="setting">设置</string>
    <string name="barcode_gun">条码枪</string>
    <string name="main_board">主板</string>
    <string name="main_board_status">正常</string>
    
    <string name="cpu_seizure_rate">CPU占用率：</string>
    <string name="cpu_temperature">CPU温度：</string>
    <string name="energy_information">电量信息：</string>
    <string name="voltage">电压：</string>
    <string name="printer_state">打印机状态：</string>

    <string name="reader_state">读票机状态：</string>
    <string name="state">正常</string>
    <string name="reader_result">识别结果：</string>
    <string name="ticket_recognition">读票识别</string>
    <string name="mark_printing">标记打印</string>
    
    <string name="decoding_format_test">解码格式测试</string>
    <string name="display_performance_test">显示性能测试</string>
    <string name="synchronization">同步</string>
    <string name="asynchronous">异步</string>
    <string name="ethernet">以太网</string>
    <string name="bluetooth">蓝牙</string>
    <string name="wifi">wifi</string>
    
    <string name="android_version">安卓版本：</string>
    <string name="version">Android 4.4</string>
    <string name="SE_Android">SE-Android：</string>
    <string name="jurisdiction">支持</string>
    <string name="current_resolution">当前分辨率：</string>
    <string name="resolving_power">1920*1680</string>
    <string name="set_resolution">设置分辨率：</string>

    <string name="sure">修改系统时间</string>
    <string name="resolving_modify">修改分辨率</string>
    <string name="get_net_time">获取网络时间</string>
    <string name="now_location">我的位置</string>
    <string name="ethernetOrWifi">以太网或wifi测试</string>
    <string name="loading">加载中...</string>
    <string name="net_break">断网了，亲</string>
    <string name="net_url">www.baidu.com</string>
    <string name="net_hint">请输入网址,如：www.baidu.com</string>
    <string name="skip">跳转</string>
    <string name="browse">浏览</string>
    <string name="play">播放</string>
    <string name="stop">停止</string>
    <string name="pause">暂停</string>
    <string name="goon">继续</string>
    <string name="touch_revise">触屏校准</string>
    <string name="print">开始打印</string>
    <string name="machinePause">视频暂停</string>

    <string name="year">年：</string>
    <string name="month">月：</string>
    <string name="day">日：</string>
    <string name="hour">时：</string>
    <string name="minute">分：</string>
    <string name="second">秒：</string>
    <string name="hint_year">请输入年份，如2017</string>
    <string name="hint_month">请输入月份，如08</string>
    <string name="hint_day">请输入日份，如09或21</string>
    <string name="hint_hour">请输入时，如08</string>
    <string name="hint_minute">请输入分，如00</string>
    <string name="hint_second">请输入秒，如35</string>

    <string name="volume_now">"当前音量："</string>
</resources>
