<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:gravity="center"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/system_text_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/current_resolution"/>

        <EditText
            android:layout_width="@dimen/current_resolution_editText"
            android:layout_height="wrap_content"
            android:text="@string/resolving_power"
            android:background="@drawable/frame_shape"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin_left"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/system_text_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/set_resolution"/>

        <Spinner
            android:layout_width="@dimen/system_text_width"
            android:layout_height="wrap_content"
            android:entries="@array/spinnerArr"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sure"/>

    </LinearLayout>


</LinearLayout>