<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_marginLeft="@dimen/activity_main_bottom_high"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin_bottom"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size"
            android:text="@string/reader_state"/>

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/frame_shape"
            android:text="@string/state"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin_bottom"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size"
        android:text="@string/reader_result"/>

    <TextView
        android:layout_width="500dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="@dimen/text_spacing"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/text_view_padding"
        android:layout_marginBottom="@dimen/button_margin_bottom">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:padding="@dimen/text_spacing"
            android:layout_marginLeft="@dimen/button_margin_left"
            android:text="@string/ticket_recognition"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/text_size"
            android:padding="@dimen/text_spacing"
            android:layout_marginLeft="@dimen/button_margin_left"
            android:text="@string/mark_printing"/>

    </LinearLayout>

</LinearLayout>