<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@drawable/timg"
              android:layout_width="match_parent"
              android:layout_height="@dimen/activity_main_right_height">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/action_bar"
        android:paddingTop="@dimen/text_view_padding"
        android:paddingBottom="@dimen/text_view_padding"
        android:paddingLeft="@dimen/current_resolution_editText"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/printer_state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/list_view_text_size"
            android:textColor="@android:color/black"
            android:text="版本：1.05"/>

        <TextView
            android:id="@+id/cpu_occupancy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/list_view_text_size"
            android:textColor="@android:color/black"
            android:text="@string/cpu_seizure_rate"/>

        <TextView
            android:id="@+id/cpu_temperature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/list_view_text_size"
            android:textColor="@android:color/black"
            android:text="@string/cpu_temperature"/>

        <TextView
            android:id="@+id/voltage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/list_view_text_size"
            android:textColor="@android:color/black"
            android:text="@string/voltage"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="1dp">

        <TextView
            android:id="@+id/diagnose_procedure"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/text_size"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_color_normal"
            android:text="@string/diagnose_procedure"/>

        <TextView
            android:id="@+id/printer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/text_size"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_color_normal"
            android:text="@string/printer"/>

        <TextView
            android:id="@+id/scanner_gun"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/text_size"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_color_normal"
            android:text="@string/scanner_gun"/>

        <TextView
            android:id="@+id/ticket_reader"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/text_size"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_color_normal"
            android:text="@string/ticket_reader"/>

        <!--<TextView-->
            <!--android:id="@+id/keyboard"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:gravity="center"-->
            <!--android:textSize="@dimen/text_size"-->
            <!--android:paddingTop="@dimen/button_padding"-->
            <!--android:paddingBottom="@dimen/button_padding"-->
            <!--android:textColor="@android:color/white"-->
            <!--android:background="@drawable/btn_color_normal"-->
            <!--android:text="@string/keyboard"/>-->

        <TextView
            android:id="@+id/toast_chance"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/text_size"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_color_normal"
            android:text="@string/toast_chance"/>

        <TextView
            android:id="@+id/setting"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/text_size"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_color_normal"
            android:text="@string/setting"/>

    </LinearLayout>

</LinearLayout>