<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_net"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@drawable/frame_shape"
        android:paddingLeft="@dimen/bottom_text_padding"
        android:paddingRight="@dimen/bottom_text_padding"
        app:layout_heightPercent="100%"
        app:layout_widthPercent="60%">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/status_bar"
            android:layout_marginBottom="@dimen/status_bar"
            android:textSize="@dimen/text_size"
            android:textColor="@android:color/black"
            android:text="@string/ethernetOrWifi"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/frame_shape">

            <WebView
                android:id="@+id/toWeb"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </WebView>

            <ImageButton
                android:id="@+id/img_exit"
                android:layout_width="@dimen/bottom_text_padding"
                android:layout_height="@dimen/bottom_text_padding"
                android:layout_gravity="top|right"
                android:background="@drawable/lucency"
                android:clickable="true"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/ll_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="false"
                    android:indeterminateDrawable="@drawable/dialog_style_xml_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/loading"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_fail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/laodfail"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/net_break"/>

            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/button_margin_left"
            android:layout_marginTop="@dimen/text_view_padding"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_url"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/net_url"
                android:hint="@string/net_hint"
                android:textColorHint="@android:color/darker_gray"/>

            <Button
                android:id="@+id/btn_skip_web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_toRightOf="@id/ll_net"
        android:gravity="center"
        android:background="@drawable/frame_shape"
        app:layout_heightPercent="100%"
        app:layout_widthPercent="40%">

        <Button
            android:id="@+id/btn_bluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="选取文件"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_bluetooth"
            android:text="通过蓝牙传输文件"/>

    </RelativeLayout>

</android.support.percent.PercentRelativeLayout>